k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: barclays-mortgage
  labels:
    app: client
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
