k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: barclays-mortgage
  labels:
    app: server
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
